<resources>
    <string name="app_name">ListOfTasks</string>
    <string name="action_settings">Settings</string>

    <string name="pending">Pending</string>
    <string name="listNoElements">No elements</string>

    <string name="newItem">Add new task</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="deleteItem">Delete task</string>
    <string name="editItem">Edit task</string>
    <string name="confirmDeleteItem">Task will be delete. Are you sure?</string>

    <string name="save">Add</string>
    <string name="update">Update</string>
    <string name="identificator">Identificator</string>
    <string name="element">Element</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="importance">Importance</string>

    <string name="dataError">Load failed</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
